Made this a proper html doc

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-I make cool shit!
+<html>
+  <head>
+    <title>We make cool shit!</title>
+  </head>
+  <body>
+    <p>We are a startup that's going to take over the world!</p>
+   </body>
+</html>
